--- a/egg/Makefile.am
+++ b/egg/Makefile.am
@@ -15,7 +15,8 @@ libegg_la_SOURCES = \
 	egg-dbus.c egg-dbus.h \
 	egg-dh.c egg-dh.h \
 	egg-libgcrypt.c egg-libgcrypt.h \
-	egg-secure-memory.c egg-secure-memory.h
+	egg-secure-memory.c egg-secure-memory.h \
+	egg-testing.h
 
 # -------------------------------------------------------------------
 
