--- a/distro/archlinux/PKGBUILD
+++ b/distro/archlinux/PKGBUILD
@@ -8,12 +8,12 @@ depends=('libgcrypt') # 'eggdbus' 'mate-keyring'
 makedepends=('intltool' 'pkgconfig' 'python')
 groups=('mate')
 options=('!emptydirs' '!libtool')
-url="http://matsusoft.com.ar/projects"
-source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('43f5181a67c2b6a86af51adef21040658c111621f6026c2feb226a43f2567012')
+url="http://matsusoft.com.ar/projects/mate/"
+source=()
+sha256sums=()
 
 build() {
-    cd "${srcdir}/${pkgname}"
+	cd "${srcdir}/../../../"
     ./autogen.sh \
         --prefix=/usr \
         --sysconfdir=/etc \
@@ -25,7 +25,7 @@ build() {
 }
 
 package() {
-    cd "${srcdir}/${pkgname}"
+	cd "${srcdir}/../../../"
 
     make DESTDIR="${pkgdir}" install || return 1
 }
