--- a/egg/tests/Makefile.am
+++ b/egg/tests/Makefile.am
@@ -9,6 +9,7 @@ LDADD =  \
 
 TEST_PROGS = \
 	test-dh \
+	test-hkdf \
 	test-secmem
 
 check_PROGRAMS = $(TEST_PROGS)
@@ -17,3 +18,7 @@ test: ${TEST_PROGS}
 	gtester -k --verbose ${TEST_PROGS}
 
 check-local: test
+
+if WITH_TESTS
+all-local: $(check_PROGRAMS)
+endif
