--- a/configure.in
+++ b/configure.in
@@ -1,10 +1,4 @@
-
-m4_define([libmatekeyring_major_version], [1])
-m4_define([libmatekeyring_minor_version], [2])
-m4_define([libmatekeyring_micro_version], [0])
-m4_define([libmatekeyring_version],[libmatekeyring_major_version.libmatekeyring_minor_version.libmatekeyring_micro_version])
-
-AC_INIT([libmate-keyring], [libmatekeyring_version], [https://github.com/mate-desktop/libmatekeyring])
+AC_INIT([libmatekeyring], [1.3.0])
 AC_CONFIG_SRCDIR([library/mate-keyring.h])
 AM_INIT_AUTOMAKE([tar-ustar])
 
@@ -27,8 +21,12 @@ AM_PROG_LIBTOOL
 IT_PROG_INTLTOOL([0.35.0])
 AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
 
-LIB_MATE_KEYRING_LT_VERSION=1:1:0
+LIB_MATE_KEYRING_LT_VERSION=1:1:1
 AC_SUBST(LIB_MATE_KEYRING_LT_VERSION)
+
+version_bits=`echo $VERSION | tr '.' ' '`
+full_version=`printf %03d%03d%03d $version_bits`
+AC_DEFINE_UNQUOTED(GKR_VERSION, $full_version, [The libmatekeyring version as a number])
 
 AC_TYPE_PID_T
 AC_TYPE_SIGNAL
